# metapackages

./: .gitignore  .pre-commit-config.yaml  README.md  build-repo  copy-repo  key.gpg  list-repo  pubkey.gpg  pyproject.toml  repo  repository  repository.py  update-package
.github/workflows/: build.yml  ci.yaml  publish-gh-pages.yaml  publish_gh_pages.yaml
conf/: distributions
configs/reprepro/: distributions
keys/: pubkey.gpg
metapackages/: __init__.py  distribution.py  gpg.py  packages.py  repository.py  script.py  utils.py
static/: index.html  keyring.asc
